# OuterTheGate

./: CMakeLists.txt  README.md  attempt_collision_avodience_hover.cpp  rc_flight_authentic.cpp  repge3.cpp  uav.launch  using_launch.launch
tex/: README.md
